@@ -12,6 +12,7 @@ update-manager (1:0.87.16) hardy; urgency=low
       (if run under ssh) more robust
     - set status to "Calculating changes" again after displaying
       demoted packages
+    - improve logging if prerequisites download fails
   * DistUpgrade/DistUpgrade.cfg.dapper:
     - add "lvm2" to the KeepInstalledPkgs (LP: #211488)
     - sync RemoveObsoletes, ForcedObsoletes, KeepInstalledSections
@@ -20,7 +21,7 @@ update-manager (1:0.87.16) hardy; urgency=low
   * po/*.po:
     - updated translations (LP: #210699)
 
- --
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 04 Apr 2008 18:54:13 +0200
 
 update-manager (1:0.87.15) hardy; urgency=low
 
